# exiftool_prototype

./: .gitignore  CMakeLists.txt  img.txt  main.cpp  thermal.txt
cpp_exiftool/example/: example1  example2  example3  example4  example5
thermal_face_data/: thermal.txt  thermal2.txt  thermal3.txt
